--- a/src/assets/SCSS/Components/_scroll.scss
+++ b/src/assets/SCSS/Components/_scroll.scss
@@ -1,12 +1,9 @@
-//================================================================ [VARIABLES]
-$colorBackground: #fff9dc;
-$gradient1: linear-gradient(to right top, #ff930a, #fd7328, #f5543c, #e6344c, #d1105a);
+@import '../colors';
 
 //================================================================ [SCROLL]
-@mixin scroll1() {
+@mixin scroll-1() {
   &::-webkit-scrollbar {
     width: .5em;
-    background-color: $colorBackground;
   }
 
   /* Track */
@@ -16,7 +13,7 @@ $gradient1: linear-gradient(to right top, #ff930a, #fd7328, #f5543c, #e6344c, #d
 
   /* Handle */
   &::-webkit-scrollbar-thumb {
-    background-image: $gradient1;
+    background-image: $gradient2;
     cursor: pointer;
   }
 }
