--- a/src/assets/SCSS/_buttons.scss
+++ b/src/assets/SCSS/_buttons.scss
@@ -9,7 +9,8 @@
     transition: $transition;
     background-color: rgba(255, 255, 255, 0);
     border:none;
-    height: 40px
+    height: 100%;
+    cursor: pointer;
 
     i,
     h3 {
@@ -17,7 +18,7 @@
     }
 
     &:hover {
-        box-shadow: $shadow3;
+        box-shadow: $shadow1;
         transform: scale(1.1);
         background-color: $color2;
 
