--- a/src/assets/SCSS/mainUseful.css
+++ b/src/assets/SCSS/mainUseful.css
@@ -27,6 +27,22 @@ footer, header, hgroup, menu, nav, section {
 
 body {
   line-height: 1;
+  /* Track */
+  /* Handle */
+}
+
+body::-webkit-scrollbar {
+  width: .5em;
+}
+
+body::-webkit-scrollbar-track {
+  border-radius: .7em;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-image: -webkit-gradient(linear, right bottom, left top, from(#0077b6), color-stop(#008cc4), color-stop(#06a1d0), color-stop(#2ab5db), to(#48cae4));
+  background-image: linear-gradient(to left top, #0077b6, #008cc4, #06a1d0, #2ab5db, #48cae4);
+  cursor: pointer;
 }
 
 ol, ul {
@@ -55,8 +71,13 @@ table {
   transition: ease 0.15s;
   background-color: rgba(255, 255, 255, 0);
   border: none;
-  height: 40px i, h3;
-  height-color: white !important;
+  height: 100%;
+  cursor: pointer;
+}
+
+.btn i,
+.btn h3 {
+  color: white !important;
 }
 
 .btn:hover {
@@ -149,6 +170,54 @@ table {
 
 .grid-12 {
   width: 100%;
+}
+
+footer {
+  width: 100%;
+  height: 50vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  padding: 3em;
+  -webkit-box-shadow: 0px -10px 30px rgba(15, 15, 15, 0.2);
+          box-shadow: 0px -10px 30px rgba(15, 15, 15, 0.2);
+  background-color: white;
+}
+
+footer span {
+  color: white;
+}
+
+footer span {
+  margin-left: .4em;
+}
+
+footer a {
+  text-decoration: underline;
+}
+
+footer a:hover {
+  color: #0096c7;
+}
+
+footer p {
+  margin-bottom: 1.2em;
+}
+
+footer .button-footer {
+  background-color: #0096c7;
+  margin-right: .8em;
+  border-radius: 10px;
 }
 
 main {
